# atom-clang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  binding.gyp  index.coffee  install.sh  llvm-config.sh  package.json
cmake/: FindLibClang.cmake
keymaps/: atom-clang.cson
lib/: commands.coffee  config.coffee  debug.coffee  events.coffee  linter.coffee  parsecoalescer.coffee  provider.coffee  scope.coffee  util.coffee
src/: clang.cpp  clang_helpers.cpp  clang_helpers.hpp  clang_translationunit.cpp  clang_translationunit.hpp  command_line_args.cpp  command_line_args.hpp  completion.cpp  completion.hpp  defines.hpp  diagnostic.cpp  diagnostic.hpp  logger.hpp  unsaved_files.cpp  unsaved_files.hpp
